@@ -73,16 +73,14 @@ public class AutoTools {
         put("autotools:axe", new ResourceLocation[]{ResourceLocation.parse("minecraft:netherite_axe"), ResourceLocation.parse("minecraft:diamond_axe"), ResourceLocation.parse("minecraft:iron_axe"), ResourceLocation.parse("minecraft:golden_axe"), ResourceLocation.parse("minecraft:stone_axe"), ResourceLocation.parse("minecraft:wooden_axe")});
     }};
 
-    public static final List<Integer> IGNORED_SLOTS = new ArrayList<>();
-    public static final List<Integer> TARGET_SLOTS = new ArrayList<>();
-
     public static final Stack<Integer> swaps = new Stack<>();
     public static boolean toggle = true;
-    public static BlockState lastBlock = null;
-    /**
-     * Used for SWITCH_BACK when toggle is disabled
-     */
+
+    //Used for SWITCH_BACK when toggle is disabled
     public static boolean startedMining = false;
+
+    // Used for the experimental swap delay
+    public static boolean swapped = false;
 
 
     /**
@@ -99,30 +97,8 @@ public class AutoTools {
         CUSTOM_TOOLS.put(ResourceLocation.fromNamespaceAndPath("minecraft", "bamboo"), new ArrayList<>(Arrays.asList(TOOL_LISTS.get("autotools:sword"))));
         loadCustomItems();
 
-
-        AutoTools.IGNORED_SLOTS.clear();
-        for (String s : AutoToolsConfig.IGNORED_SLOTS.replaceAll("[\\[\\]]", "").split(",")) {
-            if (s.isEmpty()) continue;
-            try {
-                int i = Integer.parseInt(s) - 1;
-                if (i < 9) AutoTools.IGNORED_SLOTS.add(i);
-                else LOGGER.error("Incorrect config entry for ignoredSlots: " + i + " must be between 1-9");
-            } catch (NumberFormatException e) {
-                LOGGER.error("Incorrect config entry for ignoredSlots: unknown number: " + s);
-            }
-        }
-
-        AutoTools.TARGET_SLOTS.clear();
-        for (String s : AutoToolsConfig.TARGET_SLOTS.replaceAll("[\\[\\]]", "").split(",")) {
-            if (s.isEmpty()) continue;
-            try {
-                int i = Integer.parseInt(s) - 1;
-                if (i < 9) AutoTools.TARGET_SLOTS.add(i);
-                else LOGGER.error("Incorrect config entry for targetSlots: " + i + " must be between 1-9");
-            } catch (NumberFormatException e) {
-                LOGGER.error("Incorrect config entry for targetSlots: unknown number: " + s);
-            }
-        }
+        AutoToolsConfig.IGNORED_SLOTS = AutoToolsConfig.IGNORED_SLOTS.stream().map(i -> i - 1).toList();
+        AutoToolsConfig.TARGET_SLOTS = AutoToolsConfig.TARGET_SLOTS.stream().map(i -> i - 1).toList();
     }
 
     private static void loadCustomItems() {
@@ -178,12 +154,14 @@ public class AutoTools {
      * @param sourceSlot The slot with the item you want to select
      */
     public static void selectItem(Minecraft client, Inventory inventory, int sourceSlot) {
+        if(sourceSlot == inventory.selected) return;
+
         if (swaps.empty()) {
             swaps.push(inventory.selected);
         }
 
         if (sourceSlot <= 8 && !AutoToolsConfig.KEEPSLOT) {
-            if (swaps.get(swaps.size() - 1) != inventory.selected) {
+            if (swaps.getLast() != inventory.selected) {
                 if (swaps.peek() != sourceSlot) swaps.push(inventory.selected);
             }
             inventory.selected = sourceSlot;
@@ -194,15 +172,18 @@ public class AutoTools {
         if(sourceSlot <= 8) sourceSlot += 36;   // Needs to be done because the hotbar slots are shifted by 36 in slot index
 
         int destSlot = AutoToolsConfig.KEEPSLOT ? inventory.selected : getSuitableHotbarSlot(inventory);
-        if (!TARGET_SLOTS.contains(destSlot)) destSlot = TARGET_SLOTS.get(0);
+        if (!AutoToolsConfig.TARGET_SLOTS.contains(destSlot)) destSlot = AutoToolsConfig.TARGET_SLOTS.getFirst();
 
         if (swaps.peek() != sourceSlot) swaps.push(sourceSlot);
         if (swaps.peek() != destSlot) swaps.push(destSlot);
 
+        swapped = true;
         client.gameMode.handleInventoryMouseClick(client.player.inventoryMenu.containerId, sourceSlot, destSlot, ClickType.SWAP, client.player);
 
         inventory.selected = destSlot;
         inventory.setChanged();
+
+        if(!AutoToolsConfig.SWITCH_BACK) swaps.clear(); //Easy way to safe some memory because swaps are only needed for switchBack
     }
 
     /**
@@ -213,14 +194,14 @@ public class AutoTools {
         int j;
         for (i = 0; i < 9; ++i) {
             j = (inventory.selected + i) % 9;
-            if (TARGET_SLOTS.contains(j) && inventory.items.get(j).isEmpty()) {
+            if (AutoToolsConfig.TARGET_SLOTS.contains(j) && inventory.items.get(j).isEmpty()) {
                 return j;
             }
         }
 
         for (i = 0; i < 9; ++i) {
             j = (inventory.selected + i) % 9;
-            if (TARGET_SLOTS.contains(j) && !inventory.items.get(j).isEnchanted()) {
+            if (AutoToolsConfig.TARGET_SLOTS.contains(j) && !inventory.items.get(j).isEnchanted()) {
                 return j;
             }
         }
@@ -238,6 +219,40 @@ public class AutoTools {
         if (client.player == null || client.gameMode == null) return;
 
         Inventory inventory = client.player.getInventory();
+
+        //Minimizing swaps by removing reverted/duplicate . Flattening/Squashing the Stack. E.g. [0, 30, 0, 30, 0] -> [0]
+        boolean changed = true;
+        while(changed && swaps.size() > 1){
+            changed = false;
+
+            loop:
+            for (int intervalSize = swaps.size()/2; intervalSize >= 2; intervalSize--) {
+                for (int topOffset = 0; topOffset <= swaps.size()/ intervalSize; topOffset++) {
+                    boolean foundDuplicate = true;
+
+                    if(swaps.size() - 1 - topOffset >= 2* intervalSize){
+                        for (int j = topOffset; j < intervalSize + topOffset; j++) {
+                            if(swaps.elementAt(swaps.size() - j - 1) != swaps.elementAt(swaps.size() - 1 - intervalSize - j)){
+                                foundDuplicate = false;
+                                break;
+                            }
+                        }
+                    }
+                    else{
+                        foundDuplicate = false;
+                    }
+                    if(foundDuplicate) {
+                        int initialSize = swaps.size();
+                        for (int i = 0; i < intervalSize *2; i++) {
+                            swaps.remove(initialSize - topOffset - intervalSize *2);
+                        }
+
+                        changed = true;
+                        break loop;
+                    }
+                }
+            }
+        }
 
         while (!swaps.empty()) {
             int i = swaps.pop();
@@ -298,15 +313,15 @@ public class AutoTools {
         }
 
 
+        HolderLookup.RegistryLookup<Enchantment> EnchantmentsLookup = level.registryAccess().lookup(Registries.ENCHANTMENT).get();
         if (stack.isEnchanted()) {
-            HolderLookup.RegistryLookup<Enchantment> EnchantmentsLookup = level.registryAccess().lookup(Registries.ENCHANTMENT).get();
 
             //SilkTouch
             if (EnchantmentHelper.getItemEnchantmentLevel(EnchantmentsLookup.get(Enchantments.SILK_TOUCH).get(), stack) == 1) {
                 if (ClientTags.isInWithLocalFallback(SILK_TOUCH, blockState.getBlock())
-                        || AutoToolsConfig.PREFER_SILK_TOUCH.equals("always") && ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS, blockState.getBlock())
-                        || AutoToolsConfig.PREFER_SILK_TOUCH.equals("except_ores") && ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS_EXC_ORES, blockState.getBlock())
-                        || AutoToolsConfig.PREFER_SILK_TOUCH.equals("always_ores") && ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS_ORES, blockState.getBlock())) {
+                        || AutoToolsConfig.PREFER_SILK_TOUCH == AutoToolsConfig.PreferSilkTouch.always && ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS, blockState.getBlock())
+                        || AutoToolsConfig.PREFER_SILK_TOUCH == AutoToolsConfig.PreferSilkTouch.except_ores && ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS_EXC_ORES, blockState.getBlock())
+                        || AutoToolsConfig.PREFER_SILK_TOUCH == AutoToolsConfig.PreferSilkTouch.ores && ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS_ORES, blockState.getBlock())) {
                     priority = 6;
                 }
             }
@@ -322,21 +337,20 @@ public class AutoTools {
             if (ClientTags.isInWithLocalFallback(FORTUNE, blockState.getBlock()) && ClientTags.isInWithLocalFallback(DO_NOT_SWAP_UNLESS_ENCH, blockState.getBlock()) && stack.getItem() instanceof HoeItem) {
                 priority += 1;
             }
+        }
 
-
-            if (blockState.getDestroySpeed(null, pos) != 0 && miningSpeed > 1) {
-                if (EnchantmentHelper.getItemEnchantmentLevel(EnchantmentsLookup.get(Enchantments.SILK_TOUCH).get(), stack) == 0 && !ClientTags.isInWithLocalFallback(SILK_TOUCH, blockState.getBlock())) {
-                    if ((ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS_EXC_ORES, blockState.getBlock()) && !AutoToolsConfig.PREFER_SILK_TOUCH.equals("except_ores"))
-                            || (ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS_ORES, blockState.getBlock()) && !AutoToolsConfig.PREFER_SILK_TOUCH.equals("always_ores"))
-                            || (ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS, blockState.getBlock()) && !AutoToolsConfig.PREFER_SILK_TOUCH.equals("always"))) {
-                        priority += 1;
-                    }
-                }
-
-                if (EnchantmentHelper.getItemEnchantmentLevel(EnchantmentsLookup.get(Enchantments.FORTUNE).get(), stack) == 0 && !ClientTags.isInWithLocalFallback(FORTUNE, blockState.getBlock())
-                        && ClientTags.isInWithLocalFallback(FORTUNE_SETTING, blockState.getBlock()) && !AutoToolsConfig.ALWAYS_PREFER_FORTUNE) {
+        if (blockState.getDestroySpeed(null, pos) != 0 && miningSpeed > 1) {
+            if (EnchantmentHelper.getItemEnchantmentLevel(EnchantmentsLookup.get(Enchantments.SILK_TOUCH).get(), stack) == 0 && !ClientTags.isInWithLocalFallback(SILK_TOUCH, blockState.getBlock())) {
+                if ((ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS_EXC_ORES, blockState.getBlock()) && AutoToolsConfig.PREFER_SILK_TOUCH != AutoToolsConfig.PreferSilkTouch.except_ores)
+                        || (ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS_ORES, blockState.getBlock()) && AutoToolsConfig.PREFER_SILK_TOUCH != AutoToolsConfig.PreferSilkTouch.ores)
+                        || (ClientTags.isInWithLocalFallback(SILK_TOUCH_SETTING_ALWAYS, blockState.getBlock()) && AutoToolsConfig.PREFER_SILK_TOUCH != AutoToolsConfig.PreferSilkTouch.always)) {
                     priority += 1;
                 }
+            }
+
+            if (EnchantmentHelper.getItemEnchantmentLevel(EnchantmentsLookup.get(Enchantments.FORTUNE).get(), stack) == 0 && !ClientTags.isInWithLocalFallback(FORTUNE, blockState.getBlock())
+                    && ClientTags.isInWithLocalFallback(FORTUNE_SETTING, blockState.getBlock()) && !AutoToolsConfig.ALWAYS_PREFER_FORTUNE) {
+                priority += 1;
             }
         }
 
@@ -360,11 +374,28 @@ public class AutoTools {
         return -1;
     }
 
+    /**
+     * @return If the ItemStack should be considered a valid tool based on the MIN_DURABILITY config option
+     */
+    public static boolean checkDurability(ItemStack stack){
+        if (AutoToolsConfig.MIN_DURABILITY < 1) {
+            double durability = (double) (stack.getMaxDamage() - stack.getDamageValue()) / stack.getMaxDamage();
+            if (durability < AutoToolsConfig.MIN_DURABILITY)
+                return false;
+        } else if (stack.getMaxDamage() - stack.getDamageValue() <= AutoToolsConfig.MIN_DURABILITY)
+            return false;
+
+        return true;
+    }
 
     public static void getCorrectTool(HitResult hit, Minecraft client) {
         Inventory inventory = client.player.getInventory();
 
-        if (IGNORED_SLOTS.contains(inventory.selected)) return;
+        if (AutoToolsConfig.IGNORED_SLOTS.contains(inventory.selected)) return;
+
+        ItemStack stack = inventory.getSelected();
+        if(AutoToolsConfig.ENABLED == AutoToolsConfig.Enabled.tool && !stack.getComponents().has(DataComponents.TOOL)) return;
+        else if(AutoToolsConfig.ENABLED == AutoToolsConfig.Enabled.no_tool && stack.getComponents().has(DataComponents.TOOL)) return;
 
         if (hit.getType() == HitResult.Type.BLOCK) {
             BlockHitResult blockHitResult = (BlockHitResult) hit;
@@ -381,8 +412,11 @@ public class AutoTools {
                     if (Objects.equals(resourceLocation, ResourceLocation.fromNamespaceAndPath("autotools", "disabled")))
                         return;
 
-                    toolSlot = AutoTools.findSlotMatchingItem(inventory, new ItemStack(BuiltInRegistries.ITEM.get(resourceLocation)));
-                    if (toolSlot != -1) break;
+                    Item item = BuiltInRegistries.ITEM.get(resourceLocation);
+                    if(item != Items.AIR) {
+                        toolSlot = AutoTools.findSlotMatchingItem(inventory, new ItemStack(item));
+                        if (toolSlot != -1) break;
+                    }
                 }
 
                 if (toolSlot == -1) {
@@ -424,12 +458,7 @@ public class AutoTools {
                     ItemMiningSpeed newMiningSpeed = new ItemMiningSpeed(1f, 0);
 
                     if (item.isCorrectToolForDrops(inventory.getItem(i), blockState) || !blockState.requiresCorrectToolForDrops()) {
-                        if (AutoToolsConfig.MIN_DURABILITY < 1) {
-                            double durability = (double) (inventory.getItem(i).getMaxDamage() - inventory.getItem(i).getDamageValue()) / inventory.getItem(i).getMaxDamage();
-                            if (durability < AutoToolsConfig.MIN_DURABILITY)
-                                continue;
-                        } else if (inventory.getItem(i).getMaxDamage() - inventory.getItem(i).getDamageValue() <= AutoToolsConfig.MIN_DURABILITY)
-                            continue;
+                        if(!checkDurability(inventory.getItem(i))) continue;
 
                         newMiningSpeed = getMiningSpeed(inventory.getItem(i), blockState, blockHitResult.getBlockPos(), inventory.player, client.level);
                     }
@@ -462,6 +491,8 @@ public class AutoTools {
                 selectItem(client, inventory, toolSlot);
             }
         } else if (AutoToolsConfig.CHANGE_FOR_ENTITIES && hit.getType() == HitResult.Type.ENTITY) {
+            if (AutoToolsConfig.SWITCH_BACK) return; //SwitchBack doesn't really make sense for mobs
+
             Entity entity = ((EntityHitResult) hit).getEntity();
 
             int toolSlot = -1;
@@ -492,8 +523,11 @@ public class AutoTools {
                                 if (Objects.equals(resourceLocation, ResourceLocation.fromNamespaceAndPath("autotools", "disabled")))
                                     return;
 
-                                toolSlot = AutoTools.findSlotMatchingItem(inventory, new ItemStack(BuiltInRegistries.ITEM.get(resourceLocation)));
-                                if (toolSlot != -1) break;
+                                Item item1 = BuiltInRegistries.ITEM.get(resourceLocation);
+                                if(item1 != Items.AIR) {
+                                    toolSlot = AutoTools.findSlotMatchingItem(inventory, new ItemStack(item1));
+                                    if (toolSlot != -1) break;
+                                }
                             }
 
                             if (toolSlot == -1) {
@@ -503,12 +537,7 @@ public class AutoTools {
                             }
                         }
 
-                        if (AutoToolsConfig.MIN_DURABILITY < 1) {
-                            double durability = (double) (inventory.getItem(i).getMaxDamage() - inventory.getItem(i).getDamageValue()) / inventory.getItem(i).getMaxDamage();
-                            if (durability < AutoToolsConfig.MIN_DURABILITY)
-                                continue;
-                        } else if (inventory.getItem(i).getMaxDamage() - inventory.getItem(i).getDamageValue() <= AutoToolsConfig.MIN_DURABILITY)
-                            continue;
+                        if(!checkDurability(inventory.getItem(i))) continue;
 
                         float baseAttackDamage = 0;
                         float baseAttackSpeed = 0;
@@ -547,11 +576,7 @@ public class AutoTools {
                             }
 
                             //Calculating DPS
-                            if (baseAttackSpeed > 0) {
-                                newAttackDamage = (1 + baseAttackDamage) * (4F + baseAttackSpeed);
-                            } else {
-                                newAttackDamage = 1 + baseAttackDamage;
-                            }
+                            newAttackDamage = (1 + baseAttackDamage) * (4F + baseAttackSpeed);
                         }
 
                         if (newAttackDamage > attackDamage || (newAttackDamage == attackDamage && toolSlot != -1 && inventory.getItem(i).getDamageValue() < inventory.getItem(toolSlot).getDamageValue())) {
